fix: gap tabs

--- a/src/styles/_shows.scss
+++ b/src/styles/_shows.scss
@@ -19,6 +19,7 @@
     display: flex;
     justify-content: center;
     padding-bottom: 30px;
+    gap: 2vw;
 
     @media (max-width: 768px) {
       gap: 2vw;
